# predictive-scaling

./: .env.example  .gitignore  DASHBOARD_COMPLETE.md  Dockerfile  Makefile  README.md  docker-compose.yml  instructions.md  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: settings.py
dashboard/: CUSTOMIZATION.md  DEPLOYMENT.md  FEATURES.md  OVERVIEW.md  QUICKSTART.md  README.md  SHOWCASE.md  SUMMARY.txt  VISUAL_GUIDE.md  package-lock.json  package.json  setup.sh  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: ArchitectureDiagram.tsx  Footer.tsx  HeroSection.tsx  InteractiveDemo.tsx  LiveStatusPanel.tsx  PredictionsChart.tsx  ScalingTimeline.tsx
dashboard/hooks/: useApi.ts
data/synthetic/: events.json  metrics.csv  metrics.json
docs/: api.md  architecture.md  deployment.md  operations-runbook.md
grafana/dashboards/: cost.json  main.json  predictions.json
scripts/: demo.py  generate_synthetic_data.py  init-db.sql  load_generator.py  setup_database.py  train_models.py
src/api/: main.py  middleware.py
src/api/routes/: config.py  events.py  health.py  metrics.py  predictions.py  scaling.py
src/collectors/: __init__.py  base.py  business.py  external.py  kubernetes.py  prometheus.py
src/decision/: __init__.py  candidates.py  capacity_model.py  cost_model.py  engine.py  risk_model.py  strategies.py
src/execution/: __init__.py  aws.py  base.py  kubernetes.py  rollback.py  terraform.py  verification.py
src/features/: __init__.py  base.py  business_features.py  config.py  derivative_features.py  engineer.py  fourier_features.py  lag_features.py  rolling_features.py  time_features.py
src/models/: __init__.py  base.py  combiner.py  ensemble.py  prophet_model.py  transformer.py
src/monitoring/: __init__.py  accuracy.py  alerts.py  audit.py  cost.py  health.py  metrics.py
src/prediction/: __init__.py  calibration.py  orchestrator.py  uncertainty.py
src/services/: __init__.py  prediction.py  scaling.py  scheduler.py  training.py
src/storage/: __init__.py  database.py  models.py  repositories.py
src/streaming/: __init__.py  consumer.py  processors.py  producer.py
src/utils/: logging.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_pipelines.py
tests/load/: locustfile.py
tests/unit/: test_phase10_trackers.py  test_phase11_services.py  test_phase1_config.py  test_phase2_collectors.py  test_phase3_streaming.py  test_phase4_features.py  test_phase5_models.py  test_phase6_prediction.py  test_phase7_decision.py  test_phase8_execution.py  test_phase9_monitoring.py
