[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predictive-scaler"
version = "0.1.0"
description = "Production-grade predictive infrastructure scaling system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Sanan Moinuddin" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Message Queue
    "aiokafka>=0.10.0",

    # Cache
    "redis>=5.0.1",

    # ML Frameworks
    "torch>=2.1.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.2.0",
    "catboost>=1.2.2",
    "prophet>=1.1.5",
    "scikit-learn>=1.4.0",
    "optuna>=3.5.0",

    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "polars>=0.20.0",

    # Configuration
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Kubernetes
    "kubernetes>=29.0.0",

    # AWS (optional)
    "boto3>=1.34.0",

    # Monitoring
    "prometheus-client>=0.19.0",

    # Logging
    "structlog>=24.1.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Utilities
    "tenacity>=8.2.3",
    "orjson>=3.9.10",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.1",
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "locust>=2.20.1",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
]

[project.scripts]
predictive-scaler = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "kafka.*",
    "aiokafka.*",
    "prophet.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "kubernetes.*",
]
ignore_missing_imports = true
